Sparse Disparity - Census and SAD passes tests - Fixed a bug in demo controls